--- a/app/src/main/res/layout/register_page.xml
+++ b/app/src/main/res/layout/register_page.xml
@@ -30,6 +30,7 @@
         android:textSize="@dimen/_13ssp"
         android:textColorHint="#802E4053"
         android:textColor="#D9000000"
+        android:text="oddy"
         android:layout_marginTop="@dimen/_25sdp"
         android:layout_centerHorizontal="true" />
 
@@ -42,6 +43,7 @@
         android:drawableLeft="@drawable/ic_action_person"
         android:ems="10"
         android:hint="Email"
+        android:text="oddy@unida.gontor.ac.id"
         android:inputType="text"
         android:textSize="@dimen/_13ssp"
         android:textColorHint="#802E4053"
@@ -57,6 +59,7 @@
         android:background="@drawable/text_box"
         android:drawableLeft="@drawable/ic_action_pass"
         android:ems="10"
+        android:text="oddy"
         android:hint="Password"
         android:textSize="@dimen/_13ssp"
         android:textColorHint="#802E4053"
@@ -73,6 +76,7 @@
         android:background="@drawable/text_box"
         android:drawableLeft="@drawable/ic_action_pass"
         android:ems="10"
+        android:text="oddy"
         android:hint="Re-Password"
         android:textSize="@dimen/_13ssp"
         android:textColorHint="#802E4053"
