--- a/app/src/main/res/layout/cameralayout.xml
+++ b/app/src/main/res/layout/cameralayout.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="#1a936f"
+    android:background="@color/colorBg"
     tools:context=".Handler.CameraActivity">
 
     <TextureView
