--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -5,5 +5,6 @@
         <domain includeSubdomains="true">192.168.173.1</domain>
         <domain includeSubdomains="true">192.168.1.8</domain>
         <domain includeSubdomains="true">192.168.1.4</domain>
+        <domain includeSubdomains="true">103.41.206.86</domain>
     </domain-config>
 </network-security-config>
